# epistemic-risk-detector

./: README.md
epistemic-risk-detector/: .gitignore  config.yaml  pyproject.toml
epistemic-risk-detector/example_corpus/: machine_learning_facts.txt  python_facts.txt
epistemic-risk-detector/examples/: gil_demo.py  offline_demo.py  sample_run.py
epistemic-risk-detector/src/: __init__.py  cli.py  pipeline.py
epistemic-risk-detector/src/calibrators/: __init__.py  confidence.py
epistemic-risk-detector/src/core/: __init__.py  config.py  interfaces.py  schemas.py
epistemic-risk-detector/src/evaluators/: __init__.py  alignment.py
epistemic-risk-detector/src/extractors/: __init__.py  claim_extractor.py
epistemic-risk-detector/src/providers/: __init__.py  llm.py
epistemic-risk-detector/src/renderers/: __init__.py  cli.py  structured.py
epistemic-risk-detector/src/retrievers/: __init__.py  local_vector.py
epistemic-risk-detector/src/verdict/: __init__.py  engine.py
epistemic-risk-detector/tests/: __init__.py  conftest.py  test_alignment.py  test_calibrator.py  test_claim_extractor.py  test_renderers.py  test_retriever.py  test_verdict.py
